2001-11-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tea/Makefile.in (install-doc): Added invokations of `basename`
	  to keep absolute paths to the source out of the destination for
	  the copy operation.

2001-11-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tea/configure.in:
	* tea/Makefile.in: Changed to expect the toplevel directory as
	  source directory.

2001-11-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tea/Makefile.in (install-libraries): Removed code trying to
	  install header files. We have no public headers to install. Yet.

	* htdocs/raw/index.exp: Removed reference to the old site.

	* PREPARE: Added code to move the TEA makefiles to their correct
	  location in the source distribution. This code also eliminates
	  the 'tea' subdirectory to avoid confusion.

	* README.install: Added compilation instructions.

2001-09-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htdocs/raw/mem_event.exp: New page for the website containing
	  thoughts about generation of file events for memory
	  channels. References the new documentation about the
	  interactions in the Tcl core between I/O system and notifier.

	* tools/rules/memchan: Added declaration of additional
	  documentation page about event generation.

	* tools/rules/references: Added reference to Tcl documentation
	  about the interaction between the components of the Tcl I/O
	  system and the components of the Tcl notifier.

	* ChangeLog.short: Updated contents a bit.

	* DESCRIPTION: Updated to 2.2a1, switched to new mailing address
	  and new location.

2001-09-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tea/Makefile.in (install-doc): Added installation of the memchan
	  manpages.

	* PREPARE: Removed vestiges of doc/nodes, added generation of the
	  new manpages.

	* doc/fifo.man:
	* doc/fifo2.man:
	* doc/memchan.man:
	* doc/null.man:
	* doc/random.man: Adapted to new manpage specification.
