@@ -280,7 +280,7 @@ AC_SUBST(SHLIB_LD_LIBS)
 #--------------------------------------------------------------------
 
 AC_PATH_PROGS(TCLSH_PROG,
-	tclsh8.2${EXEEXT} tclsh82${EXEEXT} tclsh${EXEEXT},
+	tclsh8.4${EXEEXT} tclsh84${EXEEXT} tclsh8.3${EXEEXT} tclsh83${EXEEXT} tclsh8.2${EXEEXT} tclsh82${EXEEXT} tclsh${EXEEXT},
 	:,
 	${exec_prefix}/bin:${prefix}/bin:${PATH})
 
