@@ -1,3 +1,12 @@
+2001-11-19  Tcl Project  <akupries@shaw.ca>
+
+	* tea/configure.in: Look for 8.4 and 8.3 tclsh's too.
+
+	* generic/bufStubLib.c (Buf_InitStubs): Using MC_UNCONSTB84.
+
+	* generic/bufIntDecls.h (GT84): New macro. Detects 8.4 and beyond.
+	  (MC_UNCONSTB84): New macro. Explanations in the sources.
+
 2001-11-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* tea/Makefile.in (install-doc): Added invokations of `basename`
